--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ hr{
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 #me{
+	margin-top: 2.5%;
 	max-width: 10%;
 	max-height: 10%;
 	transform: scale(1);
